force-app/main/default/objects/iTalentDev__SLC_Lingotek_Setting__c/iTalentDev__SLC_Lingotek_Setting__c.object-meta.xml
<CustomObject>
    <label>SLC Lingotek Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLC Lingotek Setting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>