force-app/main/default/objects/iTalentDev__SLC_Lingotek_Setting__c/fields/iTalentDev__Knowledge_API_Name__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Knowledge_API_Name__c</fullName>
    <label>Knowledge API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>