force-app/main/default/objects/iTalentDev__SLC_Lingotek_Setting__c/fields/iTalentDev__Manual_Translation_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Manual_Translation_Project_Id__c</fullName>
    <label>Manual Translation Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>